[package]
name = "etsy_get_sales"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
umya-spreadsheet = "0.4.2"
chrono = "0.4.19"
regex = "1.5.4"
