[package]
name = "hello_unit_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "hello_unit_test"
path = "src\\main\\main.rs"
[[test]]
name = "main_test"
path = "src\\tests\\main_test.rs"
